resolved ui issue z-index

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,7 @@ header {
     height: 80px;
     display: flex;
     align-items: center;
+    z-index: 999;
 }
 
 header * {
